--- a/Resources/views/maintenance.html.twig
+++ b/Resources/views/maintenance.html.twig
@@ -1,4 +1,4 @@
-{% extends 'ModeraModuleBundle::base.html.twig' %}
+{% extends '@ModeraModule/base.html.twig' %}
 
 {% block title %}Maintenance{% endblock title %}
 
